The source code synced with the Black Game Development Kit 7.9.3

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -39,17 +39,18 @@
           <li><a href="#mozTocId259576">Chapter 5. The vertex index</a></li>
           <li><a href="#mozTocId555408">Chapter 6. The image kind</a></li>
           <li><a href="#mozTocId893444">Chapter 7. The ordinary background</a></li>
-          <li><a href="#mozTocId910184">Chapter 8. The static background</a></li>
-          <li><a href="#mozTocId807594">Chapter 9. The parallax background</a></li>
-          <li><a href="#mozTocId347790">Chapter 10. The base sprite subsystem</a></li>
-          <li><a href="#mozTocId156525">Chapter 11. The ordinary sprites</a></li>
-          <li><a href="#mozTocId412464">Chapter 12. The ribbons</a></li>
-          <li><a href="#mozTocId839836">Chapter 13. The tier</a></li>
-          <li><a href="#mozTocId832010">Chapter 14. The static sprites</a></li>
-          <li><a href="#mozTocId98487">Chapter 15. The sprite sheet</a></li>
-          <li><a href="#mozTocId292221">Chapter 16. The text</a></li>
-          <li><a href="#mozTocId652638">Chapter 17. Loading an image</a></li>
-          <li><a href="#mozTocId265884">Chapter 18. The camera</a></li>
+          <li><a href="#mozTocId461777">Chapter 8. The section.</a></li>
+          <li><a href="#mozTocId910184">Chapter 9. The static background</a></li>
+          <li><a href="#mozTocId807594">Chapter 10. The parallax background</a></li>
+          <li><a href="#mozTocId347790">Chapter 11. The base sprite subsystem</a></li>
+          <li><a href="#mozTocId156525">Chapter 12. The ordinary sprites</a></li>
+          <li><a href="#mozTocId412464">Chapter 13. The ribbons</a></li>
+          <li><a href="#mozTocId839836">Chapter 14. The tier</a></li>
+          <li><a href="#mozTocId832010">Chapter 15. The static sprites</a></li>
+          <li><a href="#mozTocId98487">Chapter 16. The sprite sheet</a></li>
+          <li><a href="#mozTocId292221">Chapter 17. The text</a></li>
+          <li><a href="#mozTocId652638">Chapter 18. Loading an image</a></li>
+          <li><a href="#mozTocId265884">Chapter 19. The camera</a></li>
         </ol>
       </li>
       <li><a href="#mozTocId778712">Part 4. The transformation</a>
@@ -171,7 +172,7 @@
     <big><br>
       <u>The Eugene Game Development Kit license.</u><br>
       <br>
-      Copyright (C) 2021 – 2025 Popov Evgeniy Alekseyevich<br>
+      Copyright (C) 2021 – 2026 Popov Evgeniy Alekseyevich<br>
       <br>
       This software is provided 'as–is', without any express or implied<br>
       warranty. In no event will the authors be held liable for any damages<br>
@@ -606,7 +607,81 @@
       <br>
       Always call the <i>prepare</i> after the background has been loaded.<br>
     </big>
-    <h2><a id="mozTocId910184" class="mozTocH2"></a><big>Chapter 8. The static background</big></h2>
+    <h2><a id="mozTocId461777" class="mozTocH2"></a><big>Chapter 8. The section.</big></h2>
+    <big><br>
+      <u>A few words about the section.</u><br>
+      <br>
+      The section is a horizontal animated background.<br>
+      <br>
+      <u>Work with the section.</u><br>
+      <br>
+      Just use the <i>Section</i> class to work with the section. Let's look at the publicly available methods.<br>
+      <i> <br>
+        Section *Section::get_handle();</i> - Return the handle to the section object.<br>
+      <i> <br>
+        void Section::prepare(const Screen *screen);</i> - Prepare for drawing.<br>
+      <br>
+      <i>void Section::prepare(Screen &amp;screen);</i> - Prepare for drawing.<br>
+      <br>
+      <i>void Section::prepare(const unsigned int width, const unsigned int height);</i> - Prepare for drawing.<br>
+      <br>
+      <i>void Section::disable_mirror();</i> - Disable the background mirroring mode.<br>
+      <br>
+      <i>void Section::horizontal_mirror();</i> - Set the horizontal background mirroring mode.<br>
+      <br>
+      <i>void Section::vertical_mirror();</i> - Set the vertical background mirroring mode.<br>
+      <i> <br>
+        void Section::complex_mirror();</i> - Set both the horizontal background mirroring mode and the vertical background mirroring mode.<br>
+      <i> <br>
+        bool Section::is_horizontally_mirrored const();</i> - Return true if the background is horizontally mirrored.<br>
+      <i> <br>
+        bool Section::is_vertically_mirrored const();</i> - Return true if the background is vertically mirrored.<br>
+      <br>
+      <i>bool Section::is_complex_mirrored const();</i> - Return true if the background is both horizontally and vertically mirrored.<br>
+      <i> <br>
+        bool Section::is_mirrored const();</i> - Return true if the background is mirrored in any way.<br>
+      <i> <br>
+        unsigned int Section::set_target(const unsigned int target);</i> - Set the target frame and return it.<br>
+      <i> <br>
+        void Section::step();</i> - Increase the target frame. Set it to 1 if the target is more than the number of frames.<br>
+      <i> <br>
+        bool Section::load(Image *background, const unsigned int frames);</i> - Load a background from the buffer and return true if it is loaded.<br>
+      <i> <br>
+        bool Section::load(Image &amp;background, const unsigned int frames);</i> - Load a background from the buffer and return true if it is loaded.<br>
+      <i> <br>
+        bool Section::load(const char *name, const unsigned int frames);</i> - Load a background from the target file and return true if it is loaded.<br>
+      <br>
+      <i>void Section::draw();</i> - Draw a background.<br>
+      <br>
+      <i>void Section::draw(const unsigned int target);</i> - Draw the target frame.<br>
+      <br>
+      <i>void Section::destroy_image();</i> - Destroy a background image.<br>
+      <br>
+      <i>void Section::destroy();</i> - Destroy a background image and the texture.<br>
+      <br>
+      <i>bool Section::is_load() const;</i> - Return true if a background has already been loaded.<br>
+      <br>
+      <i>bool Section::is_last_frame() const;</i> - Return true if the current frame is the last frame.<br>
+      <i> <br>
+        bool Section::check_frame(const unsigned int target) const;</i> - Return true if the target frame is valid.<br>
+      <i> <br>
+        unsigned int Section::get_frame() const;</i> - Return the current frame.<br>
+      <i> <br>
+        unsigned int Section::get_frames() const;</i> - Return the number of the frames.<br>
+      <i> <br>
+        unsigned int Section::get_width() const;</i> - Return the width of the background.<br>
+      <br>
+      <i>unsigned int Section::get_height() const;</i> - Return the height of the background.<br>
+      <br>
+      <u>A background texture.</u><br>
+      <br>
+      The background doesn't draw if the background texture doesn't exist. It will be automatically created when you load an image.<br>
+      <u><br>
+        An important notice.</u><br>
+      <br>
+      Always call the <i>prepare</i> after the background has been loaded.<br>
+    </big>
+    <h2><a id="mozTocId910184" class="mozTocH2"></a><big>Chapter 9. The static background</big></h2>
     <big><u><br>
         A few words about the static background.</u><br>
       <br>
@@ -666,7 +741,7 @@
       <br>
       Always call the <i>prepare</i> after the background has been loaded.<br>
     </big>
-    <h2><a id="mozTocId807594" class="mozTocH2"></a><big>Chapter 9. The parallax background<br>
+    <h2><a id="mozTocId807594" class="mozTocH2"></a><big>Chapter 10. The parallax background<br>
       </big></h2>
     <big><u><br>
         A few words about the parallax.</u><br>
@@ -741,7 +816,7 @@
       <br>
       Always call the <i>prepare</i> after the background has been loaded.<br>
     </big>
-    <h2><a id="mozTocId347790" class="mozTocH2"></a><big>Chapter 10. The base sprite subsystem</big></h2>
+    <h2><a id="mozTocId347790" class="mozTocH2"></a><big>Chapter 11. The base sprite subsystem</big></h2>
     <big><u><br>
         A small, important thing.</u><br>
       <br>
@@ -833,7 +908,7 @@
       <br>
       <i>void Billboard::draw(const bool transparency, const unsigned int x, const unsigned int y); -</i> Set the transparent mode and draw a sprite at the target position.<br>
     </big>
-    <h2><a id="mozTocId156525" class="mozTocH2"></a><big>Chapter 11. The ordinary sprites</big></h2>
+    <h2><a id="mozTocId156525" class="mozTocH2"></a><big>Chapter 12. The ordinary sprites</big></h2>
     <big><br>
       <u>The sprite types.</u><br>
       <br>
@@ -870,7 +945,7 @@
       <br>
       A sprite doesn't draw if the sprite texture doesn't exist. It will automatically be created when you load or clone a sprite.<br>
     </big> <br>
-    <h2><a id="mozTocId412464" class="mozTocH2"></a><big>Chapter 12. The ribbons<br>
+    <h2><a id="mozTocId412464" class="mozTocH2"></a><big>Chapter 13. The ribbons<br>
       </big></h2>
     <big> <u>A few words about the ribbons.</u><br>
       <br>
@@ -902,7 +977,7 @@
       <br>
       A sprite doesn't draw if the sprite texture doesn't exist. It will automatically be created when you load or clone a sprite.<br>
     </big>
-    <h2><a id="mozTocId839836" class="mozTocH2"></a><big>Chapter 13. The tier</big></h2>
+    <h2><a id="mozTocId839836" class="mozTocH2"></a><big>Chapter 14. The tier</big></h2>
     <big><u>A few words about the tier.</u><br>
       <br>
       The tier is a vertical strip.<br>
@@ -933,7 +1008,7 @@
       <br>
       A sprite doesn't draw if the sprite texture doesn't exist. It will automatically be created when you load or clone a sprite.<br>
     </big>
-    <h2><a id="mozTocId832010" class="mozTocH2"></a><big>Chapter 14. The static sprites</big></h2>
+    <h2><a id="mozTocId832010" class="mozTocH2"></a><big>Chapter 15. The static sprites</big></h2>
     <big><u><br>
         A few words about the static sprites.</u><br>
       <br>
@@ -961,7 +1036,7 @@
       <br>
       A sprite doesn't draw if the sprite texture doesn't exist. It will automatically be created when you load or clone a sprite.<br>
     </big>
-    <h2><a id="mozTocId98487" class="mozTocH2"></a><big>Chapter 15. The sprite sheet</big></h2>
+    <h2><a id="mozTocId98487" class="mozTocH2"></a><big>Chapter 16. The sprite sheet</big></h2>
     <big><br>
       <u>Some words about the sprite sheet.</u><br>
       <br>
@@ -1017,7 +1092,7 @@
       <br>
       A sprite sheet doesn't draw if the sprite sheet texture doesn't exist. It will be automatically created when you load a sheet.<br>
     </big>
-    <h2><a id="mozTocId292221" class="mozTocH2"></a><big>Chapter 16. The text</big></h2>
+    <h2><a id="mozTocId292221" class="mozTocH2"></a><big>Chapter 17. The text</big></h2>
     <big><br>
       <u>How to print a text?</u><br>
       <br>
@@ -1099,7 +1174,7 @@
       <br>
       <i>void Text::destroy_font(); -</i> Destroy a font image and the texture.<br>
     </big>
-    <h2><a id="mozTocId652638" class="mozTocH2"></a><big>Chapter 17. Loading an image</big></h2>
+    <h2><a id="mozTocId652638" class="mozTocH2"></a><big>Chapter 18. Loading an image</big></h2>
     <big><u><br>
         Load an image from a file.</u><br>
       <br>
@@ -1136,7 +1211,7 @@
 
         href="https://www.gimp.org">GIMP</a> to do it. It is a powerful image editor.<br>
     </big>
-    <h2><a id="mozTocId265884" class="mozTocH2"></a><big>Chapter 18. The camera</big></h2>
+    <h2><a id="mozTocId265884" class="mozTocH2"></a><big>Chapter 19. The camera</big></h2>
     <big><br>
       <u>A few words about the camera.</u><br>
       <br>
@@ -2688,6 +2763,7 @@
       10.1.2: The tilemap subsystem has improved.<br>
       10.1.3: The source code synced with the Black Game Development Kit 7.9.1.<br>
       10.1.4: The source code synced with the Black Game Development Kit 7.9.2.<br>
+      10.1.5: The source code synced with the Black Game Development Kit 7.9.3.<br>
     </big>
   </body>
 </html>
