The image loader has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1220,7 +1220,9 @@
       <i>unsigned int Image::get_width() const; -</i> Return the width of the current image.<br>
       <br>
       <i>unsigned int Image::get_height() const; -</i> Return the height of the current image.<br>
-      <br>
+      <br>      
+      <i>size_t Image::get_pixel_amount() const; -</i> Return the amount of the image pixels.<br>
+      <br>      
       <i>size_t Image::get_length() const; -</i> Return the length of the image buffer in bytes.<br>
       <br>
       <i>Image *Image::get_handle(); -</i> Return the handle to the image loader.<br>
@@ -2772,6 +2774,7 @@
       10.1.6.1-10.1.6.3: The documentation has been updated.<br>
       10.1.7: The base graphics subsystem has improved.<br>
       10.1.8: The camera subsystem has improved.<br>
+      10.1.9: The image loader has improved.<br>
     </big>
   </body>
 </html>
