The camera subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2775,6 +2775,7 @@
       10.1.7: The base graphics subsystem has improved.<br>
       10.1.8: The camera subsystem has improved.<br>
       10.1.9: The image loader has improved.<br>
+      10.2: The camera subsystem has improved.<br>
     </big>
   </body>
 </html>
