The image loader has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -408,7 +408,7 @@
     <h2><a id="mozTocId648437" class="mozTocH2"></a><big>Chapter 3. The picture subsystem</big></h2>
     <big><u><br>An important subsystem.</u><br>
       <br>
-      The picture subsystem implements an image storage.<br>
+      The picture subsystem implements image storage.<br>
       <u><br>Work with the picture subsystem.</u><br>
       <br>
       The <i>Picture</i> class provides simple access to the picture subsystem. Don't use it directly. Let's look at the publicly available methods.<br>
@@ -2776,6 +2776,7 @@
       10.1.8: The camera subsystem has improved.<br>
       10.1.9: The image loader has improved.<br>
       10.2: The camera subsystem has improved.<br>
+      10.2.1: The image loader has improved.<br>
     </big>
   </body>
 </html>
