The sprite sheet subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2777,6 +2777,7 @@
       10.1.9: The image loader has improved.<br>
       10.2: The camera subsystem has improved.<br>
       10.2.1: The image loader has improved.<br>
+      10.2.2: The sprite sheet subsystem has improved.<br>
     </big>
   </body>
 </html>
