The picture subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -123,7 +123,6 @@
   <h2><a id="mozTocId619515" class="mozTocH2"></a><big>Chapter 2. A special thanks</big></h2>
   <big><br>
    I want to say «Big thanks for the technical consultation» to these people:<br>
-   <br>
   </big>
   <ul>
   <li><a href="https://github.com/dmitrysmagin"><big>Dmitry Smagin</big></a></li>
@@ -209,7 +208,6 @@
   <h2><a id="mozTocId341518" class="mozTocH2"></a><big>Chapter 6. The compilers</big></h2>
   <big>
    This engine was successfully tested with these compilers:<br>
-   <br>
   </big>
   <ul>
    <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
@@ -295,7 +293,7 @@
    See the documentation of the compiler for more information about linking.<br>
   </big>
   <h2><a id="mozTocId93850" class="mozTocH2"></a><big>Chapter 8. The engine namespace</big></h2>
-  <big><br>
+  <big>
    <i>EUGENEGDK</i> is the main namespace. All the engine classes are declared in a few nested namespaces.<br>
   </big>
   <h2><a id="mozTocId241696" class="mozTocH2"></a><big>Chapter 9. The custom data types</big></h2>
@@ -923,9 +921,9 @@
    <br>
    <i>bool Sheet::check_cell(const unsigned int row, const unsigned int column) const; -</i> Return true if the target cell is valid.<br>
    <br>
-   <i>unsigned int Sheet::get_row(const unsigned int target) const; -</i> Return row of the target frame.<br>
+   <i>unsigned int Sheet::get_row(const unsigned int target) const; -</i> Return the row of the target frame.<br>
    <br>
-   <i>unsigned int Sheet::get_column(const unsigned int target) const; -</i> Return column of the target frame.<br>
+   <i>unsigned int Sheet::get_column(const unsigned int target) const; -</i> Return the column of the target frame.<br>
    <br>
    <i>unsigned int Sheet::calculate(const unsigned int row, const unsigned int column) const; -</i> Calculate the frame by row and column.<br>
    <br>
@@ -1240,7 +1238,7 @@
    <i>void EUGENEGDK::Halt(const char *message); -</i> Terminate the program. Write an error message to the log file if logging is enabled.<br>
   </big>
   <h2><a id="mozTocId284221" class="mozTocH2"></a><big>Chapter 3. The timers</big></h2>
-  <big><br>
+  <big>
    A timer is a very useful thing. Just use the <i>Timer</i> class to work with the timer. Let's look at the publicly available methods.<br>
    <br>
    <i>Timer *Timer::get_handle(); -</i> Return the handle to the timer.<br>
@@ -2602,6 +2600,7 @@
    10.2.2: The sprite sheet subsystem has improved.<br>
    10.2.3: The deprecated subsystems have been removed.<br>
    10.2.4: The small changes.<br>
+   10.2.5: The picture subsystem has improved.<br>
   </big>
 </body>
 </html>
