The picture subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -90,7 +90,7 @@
       <li><a href="#mozTocId928107">Version history</a></li></ol>
   <h1><a id="mozTocId368114" class="mozTocH1"></a><big>Part 1. Welcome</big></h1>
   <h2><a id="mozTocId96569" class="mozTocH2"></a><big>Chapter 1. The introduction</big></h2>
-  <big><br><u>The introduction.</u><br>
+  <big><u>The introduction.</u><br>
    <br>
    Hello! My name is Popov Evgeniy Alekseyevich. I am an individual programmer. I enjoy creating software. I also like old-school video games. Do you want to develop video games for Microsoft Windows? You need a good game engine to do it. I made my own engine. I hope that my C++ game engine will be useful for many programmers.<br>
    <br><u>Features.</u><br>
@@ -121,7 +121,7 @@
    Yes. This is really all you need to do.<br>
   </big>
   <h2><a id="mozTocId619515" class="mozTocH2"></a><big>Chapter 2. A special thanks</big></h2>
-  <big><br>
+  <big>
    I want to say «Big thanks for the technical consultation» to these people:<br>
   </big>
   <ul>
@@ -302,13 +302,13 @@
   </big>
   <h1><a id="mozTocId736492" class="mozTocH1"></a><big>Part 2. Basic things</big></h1>
   <h2><a id="mozTocId74094" class="mozTocH2"></a><big>Chapter 1. The coordinate system</big></h2>
-  <big><br>
+  <big>
    The engine uses the standard coordinate system by default. The coordinates start at the top-left corner. Look at this picture to understand it.<br>
    <br>
    <img alt="" src="coordinate_system.png" height="111" width="107"><br>
   </big>
   <h2><a id="mozTocId889249" class="mozTocH2"></a><big>Chapter 2. A game loop</big></h2>
-  <big><br>
+  <big>
    What is the main point in your game? A game loop. You can see the structure of a typical game loop below.<br>
    <br>
    <img alt="" src="game_loop.png" height="354" width="379"><br>
@@ -383,8 +383,6 @@
    <u><br>Work with the picture subsystem.</u><br>
    <br>
    The <i>Picture</i> class provides simple access to the picture subsystem. Don't use it directly. Let's look at the publicly available methods.<br>
-   <br>
-   <i>unsigned int *Picture::get_image(); -</i> Return the handle to the image storage.<br>
    <br>
    <i>void Picture::destroy_image(); -</i> Destroy an image in the storage.<br>
    <br>
@@ -2600,7 +2598,7 @@
    10.2.2: The sprite sheet subsystem has improved.<br>
    10.2.3: The deprecated subsystems have been removed.<br>
    10.2.4: The small changes.<br>
-   10.2.5: The picture subsystem has improved.<br>
+   10.2.5-10.2.6: The picture subsystem has improved.<br>
   </big>
 </body>
 </html>
