--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1239,6 +1239,8 @@
   <big>
    A timer is a very useful thing. Just use the <i>Timer</i> class to work with the timer. Let's look at the publicly available methods.<br>
    <br>
+   <i>Timer::Timer(const double seconds); -</i> Create the timer and set it.<br>
+   <br>
    <i>Timer *Timer::get_handle(); -</i> Return the handle to the timer.<br>
    <br>
    <i>void Timer::set_timer(const double seconds); -</i> Set the timer interval and initialize the start point.<br>
@@ -2599,6 +2601,7 @@
    10.2.3: The deprecated subsystems have been removed.<br>
    10.2.4: The small changes.<br>
    10.2.5-10.2.6: The picture subsystem has improved.<br>
+   10.2.7: The timer subsystem has improved.<br>
   </big>
 </body>
 </html>
