The picture subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -395,6 +395,8 @@
    <i>size_t Picture::get_pixel_amount() const; -</i> Return the amount of the image pixels.<br>
    <br>
    <i>size_t Picture::get_image_lenght() const; -</i> Return the image length in bytes.<br>
+   <br>
+   <i>unsigned int *Picture::get_image(); -</i> Return the handle to the image storage.<br>
   </big>
   <h2><a id="mozTocId467966" class="mozTocH2"></a><big>Chapter 4. The animation subsystem</big></h2>
   <big><u>An important subsystem.</u><br>
@@ -2602,6 +2604,7 @@
    10.2.4: The small changes.<br>
    10.2.5-10.2.6: The picture subsystem has improved.<br>
    10.2.7: The timer subsystem has improved.<br>
+   10.2.8: The picture subsystem has improved.<br>
   </big>
 </body>
 </html>
